@@ -22,6 +22,8 @@ Current:
 
   * Bugfixes
     - bug #22248: Read efuse error (partial fix)
+    - bug #42267: jtag3isp fails to read lock and fuse bytes directly
+                  after changing lock byte
 
   * Internals:
     - ...
